--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             margin: auto;
             padding: 5px 20px 40px 20px;
             border: 1px solid #888;
-            width: 80%;
+            width: 50%;
             box-shadow: rgba(0, 0, 0, 0.8) 0px 4px 12px;
             border-radius: 25px;
         }
@@ -237,14 +237,14 @@
             overflow-y: auto;
         }
         ::-webkit-scrollbar{
-            width: 10px;
+            width: 1px;
         }
         ::-webkit-scrollbar-track{
             border-radius: 5px;
-            box-shadow: inset 0 0 5px grey;
+            box-shadow: inset 0 0 5px #fff;
         }
         ::-webkit-scrollbar-thumb{
-            background-color: rgb(227, 59, 59); 
+            background-color: grey; 
             border-radius: 5px;
         }
 
